tests/errors/compiler/float_in_condition/float_arr_in_if.c
void main()
{
	float arr[10];

	if (arr)
	{
		print(arr);
	}
}
